install stuff + stow not worky

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,9 +1,9 @@
-
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-1,2560x1440@164,1920x0,1
-monitor=HDMI-A-2,1920x1080@60,0x0,1
-monitor=HDMI-A-1,1920x1080@60,4480x0,1
+#monitor=DP-1,2560x1440@164,1920x0,1
+#monitor=HDMI-A-2,1920x1080@60,0x0,1
+#monitor=HDMI-A-1,1920x1080@60,4480x0,1
 
+source = ~/.config/hypr/monitorSetup.conf
 
 monitor=,preferred,auto,auto
 
@@ -13,28 +13,29 @@ monitor=,preferred,auto,auto
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-# exec-once = waybar & hyprpaper & firefox
+#exec-once = waybar #&hyprpaper & firefox
 exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = udiskie &
-#exec-once = xhost +SI:localuser:root
+exec-once = hyprlidle 
+#exec-once = udiskie &
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
+
 # Set programs that you use
-$terminal = alacritty
-$fileManager = dolphin
+$terminal = kitty
+$fileManager = thunar
 $menu = wofi --show drun
 $browser = vivaldi
 
-env = SHELL,tmux
+#env = SHELL,tmux
 
 # Nvidia vars
-env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
+#env = LIBVA_DRIVER_NAME,nvidia
+#env = XDG_SESSION_TYPE,wayland
+#env = GBM_BACKEND,nvidia-drm
+#env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+#env = WLR_NO_HARDWARE_CURSORS,1
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -52,7 +53,8 @@ input {
     follow_mouse = 1
 
     touchpad {
-        natural_scroll = no
+        natural_scroll = yes
+        scroll_factor = 0.2
     }
 
     sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
@@ -114,7 +116,7 @@ dwindle {
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    # new_is_master = true
 }
 
 gestures {
