bunch ofdotfile stuff

--- a/dot-config/hypr/hyprland.conf
+++ b/dot-config/hypr/hyprland.conf
@@ -3,6 +3,7 @@
 #monitor=HDMI-A-2,1920x1080@60,0x0,1
 #monitor=HDMI-A-1,1920x1080@60,4480x0,1
 
+exec-once = ~/.config/hypr/setMonitorConf.sh
 source = ~/.config/hypr/monitorSetup.conf
 
 monitor=,preferred,auto,auto
@@ -14,21 +15,24 @@ monitor=,preferred,auto,auto
 
 # Execute your favorite apps at launch
 #exec-once = waybar #&hyprpaper & firefox
-exec-once = /usr/lib/polkit-kde-authentication-agent-1
+#exec-once = systemctl --user start plasma-polkit-agent
+#exec-once = /usr/lib/polkit-kde-authentication-agent-1
+exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = hyprlidle 
-#exec-once = udiskie &
+exec-once = dunst
+exec-once = udiskie
 
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
 
 # Set programs that you use
-$terminal = kitty
-$fileManager = thunar
+$terminal = alacritty
+$fileManager = dolphin
 $menu = wofi --show drun
 $browser = vivaldi
 
-#env = SHELL,tmux
+env = SHELL,tmux
 
 # Nvidia vars
 #env = LIBVA_DRIVER_NAME,nvidia
@@ -40,6 +44,17 @@ $browser = vivaldi
 # Some default env vars.
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
+
+# backend variables
+env = GDK_BACKEND,wayland,x11,*
+env = QT_QPA_PLATFORM,wayland
+env = SDL_VIDEODRIVER,wayland
+env = CLUTTER_BACKEND,wayland
+
+# XDG specifications
+env = XDG_CURRENT_DESKTOP,Hyprland
+env = XDG_SESSION_TYPE,wayland
+env = XDG_SESSION_DESKTOP,Hyprland
 
 
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
@@ -132,8 +147,9 @@ misc {
 # Example per-device config
 # See https://wiki.hyprland.org/Configuring/Keywords/#per-device-input-configs for more
 device {
-    name = epic-mouse-v1
-    sensitivity = -0.5
+    name = elan06fa:00-04f3:32b2-touchpad
+    accel_profile = adaptive
+    sensitivity = 0.3
 }
 
 # Example windowrule v1
