zsh und hyprland wallpaper

--- a/dot-config/hypr/hyprland.conf
+++ b/dot-config/hypr/hyprland.conf
@@ -3,11 +3,14 @@ source = ~/.config/hypr/monitorSetup.conf
 
 monitor=,preferred,auto,auto
 
+
+
 # Execute your favorite apps at launch
 #exec-once = waybar #&hyprpaper & firefox
 #exec-once = systemctl --user start plasma-polkit-agent
 #exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = hyprpaper
+exec-once = systemctl --user start plasma-polkit-agent
 exec-once = hyprlidle 
 exec-once = dunst
 exec-once = udiskie
@@ -24,12 +27,6 @@ $browser = vivaldi
 
 env = SHELL,tmux
 
-# Nvidia vars
-#env = LIBVA_DRIVER_NAME,nvidia
-#env = XDG_SESSION_TYPE,wayland
-#env = GBM_BACKEND,nvidia-drm
-#env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-#env = WLR_NO_HARDWARE_CURSORS,1
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -98,6 +95,7 @@ decoration {
     col.shadow = rgba(1a1a1aee)
 }
 
+
 animations {
     enabled = yes
 
@@ -131,7 +129,7 @@ gestures {
 
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
+    # force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
 }
 
 # Example per-device config
