--- a/dot-config/hypr/monitorSetups/hootsman.conf
+++ b/dot-config/hypr/monitorSetups/hootsman.conf
@@ -8,10 +8,14 @@ workspace = 2, monitor:DP-1, default:true
 workspace = 3, monitor:HDMI-A-1
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 exec-once = xrandr --output DP-1 --primary
+exec-once=hyprctl dispatch workspace 2 
 
 # Nvidia vars
 env = LIBVA_DRIVER_NAME,nvidia
-env = XDG_SESSION_TYPE,wayland
-env = GBM_BACKEND,nvidia-drm
-env = __GLX_VENDOR_LIBRARY_NAME,nvidia
-env = WLR_NO_HARDWARE_CURSORS,1
+env = NVD_BACKEND,direct
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
+
+cursor {
+    no_hardware_cursors = true
+}
+
