--- a/dot-config/hypr/hyprpaper.conf
+++ b/dot-config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = /home/birger/Pictures/Wallpaper/flower.png
-wallpaper = , /home/birger/Pictures/Wallpaper/flower.png
+preload = /home/birger/Pictures/Wallpaper/sunset-mountain-beautiful.jpg
+wallpaper = , /home/birger/Pictures/Wallpaper/sunset-mountain-beautiful.jpg
