--- a/dot-config/alacritty/alacritty.toml
+++ b/dot-config/alacritty/alacritty.toml
@@ -1,13 +1,8 @@
-live_config_reload = true
-
-import = [
-    "~/.config/alacritty/catppuccin-mocha.toml"
-]
 
 [env]
 TERM = "xterm-256color"
 
-[shell]
+[terminal.shell]
 program = "/bin/tmux"
 args = ["new"]
 
@@ -29,3 +24,12 @@ opacity = 1
 [debug]
 render_timer = false
 highlight_damage = false
+
+[general]
+live_config_reload = true
+
+import = [
+    "~/.config/alacritty/catppuccin-mocha.toml"
+]
+
+[terminal]
