--- a/dot-config/hypr/hyprland.conf
+++ b/dot-config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ monitor=,preferred,auto,auto
 #exec-once = waybar #&hyprpaper & firefox
 #exec-once = systemctl --user start plasma-polkit-agent
 #exec-once = /usr/lib/polkit-kde-authentication-agent-1
-exec-once = hyprpaper
+exec-once = hyprpaper -n
 exec-once = systemctl --user start plasma-polkit-agent
 exec-once = hyprlidle 
 exec-once = dunst
@@ -43,56 +43,46 @@ env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
 
-
-# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
-input {
-    kb_layout = de
-    kb_variant =
-    kb_model =
-    kb_options =
-    kb_rules =
-
-    follow_mouse = 1
-
-    touchpad {
-        natural_scroll = yes
-        scroll_factor = 0.2
-    }
-
-    sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
-    accel_profile = flat
-}
-
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 4
-    gaps_out = 10
     border_size = 2
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
+    no_border_on_floating = false
+    gaps_in = 3
+    gaps_out = 9
+    col.active_border = rgba(33ccffee) rgba(00ff99ee) 135deg
     col.inactive_border = rgba(595959aa)
 
     layout = dwindle
 
+    snap {
+
+      }
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 }
 
+
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    rounding = 5
+    rounding = 8
+
+    active_opacity = 0.92
+    inactive_opacity = 0.88
+
+    drop_shadow = no
+    col.shadow = rgba(1a1a1aee)
+
+    dim_inactive = false
     
     blur {
         enabled = true
-        size = 3
+        size = 5
         passes = 1
+
     }
 
-    drop_shadow = yes
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
 }
 
 
@@ -109,6 +99,29 @@ animations {
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
     animation = workspaces, 1, 6, default
+}
+
+# For all categories, see https://wiki.hyprland.org/Configuring/Variables/
+input {
+    kb_layout = de
+    kb_variant =
+    kb_model =
+    kb_options =
+    kb_rules =
+
+    numlock_by_default = true
+    repeat_rate = 40
+    repeat_delay = 300
+
+    follow_mouse = 1
+
+    touchpad {
+        natural_scroll = yes
+        scroll_factor = 0.2
+    }
+
+    sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
+    accel_profile = flat
 }
 
 dwindle {
