--- a/dot-config/hypr/hyprland.conf
+++ b/dot-config/hypr/hyprland.conf
@@ -11,6 +11,7 @@ monitor=,preferred,auto,auto
 #exec-once = /usr/lib/polkit-kde-authentication-agent-1
 exec-once = hyprpaper -n
 exec-once = systemctl --user start plasma-polkit-agent
+#exec-once = systemctl start --user ydotool.service
 exec-once = hyprlidle 
 exec-once = dunst
 exec-once = udiskie
@@ -23,25 +24,32 @@ exec-once = udiskie
 $terminal = alacritty
 $fileManager = dolphin
 $menu = wofi --show drun
-$browser = vivaldi
+$browser = zen-browser
 
 env = SHELL,tmux
 
 
 # Some default env vars.
-env = XCURSOR_SIZE,24
+env = XCURSOR_SIZE,32
 env = QT_QPA_PLATFORMTHEME,qt6ct # change to qt6ct if you have that
+env = GDK_SCALE,1.5
 
 # backend variables
 env = GDK_BACKEND,wayland,x11,*
 env = QT_QPA_PLATFORM,wayland
 env = SDL_VIDEODRIVER,wayland
 env = CLUTTER_BACKEND,wayland
+env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 
 # XDG specifications
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
+
+xwayland {
+    force_zero_scaling = true
+}
+
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -70,9 +78,6 @@ decoration {
 
     active_opacity = 0.92
     inactive_opacity = 0.88
-
-    drop_shadow = no
-    col.shadow = rgba(1a1a1aee)
 
     dim_inactive = false
     
@@ -118,6 +123,7 @@ input {
     touchpad {
         natural_scroll = yes
         scroll_factor = 0.2
+        disable_while_typing = true
     }
 
     sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
@@ -160,6 +166,7 @@ device {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
+# bind = , 47, exec, ydotool type p
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -167,7 +174,7 @@ $mainMod = SUPER
 # Example binds,  ee https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, C, killactive, 
-bind = $mainMod, escape, exit, 
+bind = $mainMod, escape, exec, hyprlock
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, space, exec, $menu
@@ -260,6 +267,10 @@ bindl=, XF86AudioPlay, exec, playerctl play-pause
 bindl=, XF86AudioNext, exec, playerctl next
 #bindl=, XF86AudioPrevious, exec, playerctl previous
 
+# XF86 bekommt man mit: xev
+bindel=, XF86MonBrightnessUp, exec, brightnessctl s 5%+
+bindel=, XF86MonBrightnessDown, exec, brightnessctl s 5%-
+
 # will switch to a submap called resize
 bind=$mainMod,A,submap,audio
 # will start a submap called "resize"
@@ -278,8 +289,8 @@ submap=audio
 
     bindl=, M, exec, wpctl set-mute @DEFAULT_SOURCE@ toggle
 
-    binde=SHIFT, L, exec, playerctl position 5+
-    binde=SHIFT, H, exec, playerctl position 5-
+    binde=SHIFT, L, exec, playerctl position 30+
+    binde=SHIFT, H, exec, playerctl position 30-
     binde=SHIFT, K, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%+
     binde=SHIFT, J, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
 
