nvim and hyprland stuff

--- a/dot-config/hypr/monitorSetups/mcFife.conf
+++ b/dot-config/hypr/monitorSetups/mcFife.conf
@@ -1,3 +1,4 @@
 monitor = desc:Samsung Display Corp. 0x4152, 2880x1800@90, auto, 1.5
 workspace = 1, monitor:eDP-1, default:true
 exec-once = xrandr --output eDP-1 --primary
+env = GDK_SCALE,1.5
