--- a/dot-config/systemd/user/rclonemount@.service
+++ b/dot-config/systemd/user/rclonemount@.service
@@ -3,6 +3,7 @@ Description=rclonemount with %I
 After=network-online.target
 
 [Service]
+EnvironmentFile=/home/birger/dotfiles/secret
 Type=simple
 ExecStart=/usr/bin/rclone mount \
         --config=.config/rclone/rclone.conf \
