caps swap with esc

--- a/dot-config/hypr/hyprland.conf
+++ b/dot-config/hypr/hyprland.conf
@@ -108,7 +108,7 @@ input {
     kb_layout = de
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = caps:swapescape, shift:breaks_caps
     kb_rules =
 
     numlock_by_default = true
