switch to ghostty

--- a/dot-config/hypr/hyprland.conf
+++ b/dot-config/hypr/hyprland.conf
@@ -21,7 +21,7 @@ exec-once = udiskie
 
 
 # Set programs that you use
-$terminal = alacritty
+$terminal = ghostty
 $fileManager = dolphin
 $menu = wofi --show drun
 $browser = zen-browser
