--- a/dot-config/alacritty/alacritty.toml
+++ b/dot-config/alacritty/alacritty.toml
@@ -28,8 +28,6 @@ highlight_damage = false
 [general]
 live_config_reload = true
 
-import = [
-    "~/.config/alacritty/catppuccin-mocha.toml"
-]
+import = ["~/.config/alacritty/catppuccin-mocha.toml"]
 
 [terminal]
