--- a/dot-config/hypr/hyprland.conf
+++ b/dot-config/hypr/hyprland.conf
@@ -1,8 +1,6 @@
 exec-once = ~/.config/hypr/setMonitorConf.sh
 source = ~/.config/hypr/monitorSetup.conf
 
-monitor=,preferred,auto,auto
-
 
 
 # Execute your favorite apps at launch
@@ -12,7 +10,7 @@ monitor=,preferred,auto,auto
 exec-once = hyprpaper -n
 exec-once = systemctl --user start plasma-polkit-agent
 #exec-once = systemctl start --user ydotool.service
-exec-once = hyprlidle 
+#exec-once = hyprlidle 
 exec-once = dunst
 exec-once = udiskie
 
@@ -44,6 +42,8 @@ env = ELECTRON_OZONE_PLATFORM_HINT,wayland
 env = XDG_CURRENT_DESKTOP,Hyprland
 env = XDG_SESSION_TYPE,wayland
 env = XDG_SESSION_DESKTOP,Hyprland
+
+env = HYPRSHOT_DIR,~/Pictures/Screenshots/
 
 xwayland {
     force_zero_scaling = true
@@ -108,7 +108,7 @@ input {
     kb_layout = de
     kb_variant =
     kb_model =
-    kb_options = caps:swapescape, shift:breaks_caps
+    kb_options = caps:swapescape #, shift:breaks_caps
     kb_rules =
 
     numlock_by_default = true
@@ -167,6 +167,13 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
+
+# Screenshot a window
+bind = $mainMod, PRINT, exec, hyprshot -m window
+# Screenshot a monitor
+bind = , PRINT, exec, hyprshot -m output
+# Screenshot a region
+bind = $shiftMod, PRINT, exec, hyprshot -m region
 
 # Example binds,  ee https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, T, exec, $terminal
